Use newer java opts